Update and rename 连接的维护_todo.md to 连接的维护.md

--- a/连接的维护.md
+++ b/连接的维护.md
@@ -25,9 +25,10 @@
 > * client发出Fin，server会收到0字节，通常不能判断client是close了还是shutdown，这时server应当把消息发完，然后才可以close()，如果对方调用的是close，会收到RST，server能感知到，就可以立即close了
 > * 短连接正常结束，server可以close，也可以不close，大多数的实现是不close的(对HTTP1.1而言)
 
+我的处理方式是全部都不主动调用close()，而是调用shutdown()，让Channel析构的时候自动调用close()函数。这样做的好处是无需手动释放资源，而是通过将资源与对象生命周期绑定，在对象析构时自动释放资源，从而把资源管理转换为对象生命周期管理，而对象生命周期的管理问题已经解决。这也是C++最重要的编程技法：RAII。
 
 ##### EPOLLIN触发但是read()返回0的情况
 
 这种情况通常有两个原因:
 > * 对端已经关闭了连接，这时再写该fd会出错，此时应该关闭连接
-> * 对端只是shutdown()了写端，告诉server我已经写完了，但是还可以接收信息。server应该在写完所有的信息后再关闭连接。更优雅的做法是透明的传递这个行为，即server顺着关闭读端，然后发完数据后关闭。
+> * 对端只是shutdown()了写端，告诉server我已经写完了，但是还可以接收信息。server应该在写完所有的信息后再关闭连接，发完数据后关闭。
