Update and rename 并发模型_todo.md to 并发模型.md

--- a/并发模型.md
+++ b/并发模型.md
@@ -14,7 +14,7 @@
 ## 并发模型
 本程序使用的并发模型如下图所示：
 
-![并发模型](https://github.com/linyacool/WebServer/blob/master/datum/model.png)
+![并发模型](https://github.com/kantkant/WebServer/model.png)
 
 MainReactor只有一个，负责响应client的连接请求，并建立连接，它使用一个NIO Selector。在建立连接后用Round Robin的方式分配给某个SubReactor,因为涉及到跨线程任务分配，需要加锁，这里的锁由某个特定线程中的loop创建，只会被该线程和主线程竞争。
 
@@ -29,7 +29,7 @@ epoll的触发模式在这里我选择了ET模式，muduo使用的是LT，这两
 
 ## 定时器
 
-每个SubReactor持有一个定时器，用于处理超时请求和长时间不活跃的连接。muduo中介绍了时间轮的实现和用stl里set的实现，这里我的实现直接使用了stl里的priority_queue，底层是小根堆，并采用惰性删除的方式，时间的到来不会唤醒线程，而是每次循环的最后进行检查，如果超时了再删，因为这里对超时的要求并不会很高，如果此时线程忙，那么检查时间队列的间隔也会短，如果不忙，也给了超时请求更长的等待时间。
+每个SubReactor持有一个定时器，用于处理超时请求和长时间不活跃的连接。muduo中介绍了时间轮的实现和用stl里set的实现，这里我的实现直接使用了stl里的priority_queue，底层是小根堆，并采用惰性删除的方式，事件的超时不会唤醒线程，而是每次循环的最后进行检查，如果超时了再删，因为这里对超时的要求并不会很高，如果此时线程忙，那么检查时间队列的间隔也会短，如果不忙，也给了超时请求更长的等待时间。
 
 ## 核心结构
 
