--- a/遇到的困难.md
+++ b/遇到的困难.md
@@ -17,4 +17,4 @@
 
 包括自己写代码时遇到的c++变量错误初始化等语法错误导致bug，压测模拟大流量并发访问时遇到的bug。最后都逐一解决了。
 
-可以直接看腾讯文档：![项目记录文档](https://docs.qq.com/doc/DS0hNRk5iV2ZpT3pZ)
+可以直接看腾讯文档：[项目记录文档](https://docs.qq.com/doc/DS0hNRk5iV2ZpT3pZ)
