--- a/遇到的困难.md
+++ b/遇到的困难.md
@@ -13,8 +13,20 @@
 
 带着这个思考，我对代码进行了深度的重构。将收发数据和数据处理分离开，结构分层。单独对框架和业务进行验证，问题也就迎刃而解了。
 
-## 3. 剩下的琐碎的遇到过的bug都放在了自己平时总结用的腾讯文档里
+## 3. TCP是一个面向字节流的协议，如何保证收发数据的完整性？
 
-包括自己写代码时遇到的c++变量错误初始化等语法错误导致bug，压测模拟大流量并发访问时遇到的bug。最后都逐一解决了。
+这个问题得从buffer的设计开始讲起。我们在框架部分(HttpConn)和业务部分(HttpServer)分别使用两套buffer(inbuffer和outbuffer)。
+
+在HttpConn收到数据之后，把数据追加到HttpServer的inbuffer。HttpServer把要发送的数据填入outbuffer，并追加到HttpConn的outbuffer。
+
+在HttpConn发送数据时，只需要按照顺序发送HttpConn的outbuffer里的内容，而不用HttpServer关心各种细节。
+
+总结来讲：
+HttpConn的inbuffer可以是一个临时量，HttpConn每次读完数据后追加到HttpServer的inbuffer。
+HttpServer的outbuffer可以是一个临时量，HttpServer每次写完数据追加到HttpConn的outbuffer。
+
+## 4. 剩下的琐碎的遇到过的bug都放在了自己平时总结用的腾讯文档里
+
+包括自己写代码时遇到的c++变量错误初始化等语法错误导致bug，压测模拟大流量并发访问时遇到的bug等等。好在最后都逐一解决了～
 
 可以直接看腾讯文档：[项目记录文档](https://docs.qq.com/doc/DS0hNRk5iV2ZpT3pZ)
