--- a/遇到的困难.md
+++ b/遇到的困难.md
@@ -15,15 +15,13 @@
 
 ## 3. TCP是一个面向字节流的协议，如何保证收发数据的完整性？
 
-这个问题得从buffer的设计开始讲起。我们在框架部分(HttpConn)和业务部分(HttpServer)分别使用两套buffer(inbuffer和outbuffer)。
+这个问题得从buffer的设计开始讲起。我们在网络部分(HttpConn)和业务部分(HttpServer)分别使用两套buffer(inbuffer和outbuffer)。
 
-在HttpConn收到数据之后，把数据追加到HttpServer的inbuffer。HttpServer把要发送的数据填入outbuffer，并追加到HttpConn的outbuffer。
+在网络收到数据之后，把数据追加到业务的inbuffer，业务只需要关心自己的inbuffer，而不用关心网络中的各种细节。
 
-在HttpConn发送数据时，只需要按照顺序发送HttpConn的outbuffer里的内容，而不用HttpServer关心各种细节。
+业务把要发送的数据填入outbuffer，并追加到网络的outbuffer。
 
-总结来讲：
-HttpConn的inbuffer可以是一个临时量，HttpConn每次读完数据后追加到HttpServer的inbuffer。
-HttpServer的outbuffer可以是一个临时量，HttpServer每次写完数据追加到HttpConn的outbuffer。
+在网络发送数据时，只需要按照顺序发送网络的outbuffer里的内容，而不用关心业务的各种细节。
 
 ## 4. 剩下的琐碎的遇到过的bug都放在了自己平时总结用的腾讯文档里
 
