--- a/遇到的困难.md
+++ b/遇到的困难.md
@@ -5,7 +5,7 @@
 
 我遇到的最大的问题是不太理解One loop per thread这句话吧，翻译出来不就是每个线程一个循环，我最开始写的也是一个线程一个循环啊，muduo的实现和我的有什么区别呢？还有怎么设计才能减少竞态？
 
-带着这些问题我看了《Linux多线程服务端编程》，并看完了muduo的源码，这些问题自然而然就解决了
+带着这些问题我看了《Linux多线程服务端编程》，并看完了muduo的源码，这些问题自然而然就解决了。
 
 ## 2. 如何合理的将框架部分和业务部分分离？
 
