--- a/遇到的困难.md
+++ b/遇到的困难.md
@@ -13,15 +13,17 @@
 
 带着这个思考，我对代码进行了深度的重构。将收发数据和数据处理分离开，结构分层。单独对框架和业务进行验证，问题也就迎刃而解了。
 
-## 3. TCP是一个面向字节流的协议，如何保证收发数据的完整性？
+## 3. buffer是如何设计的？
 
-这个问题得从buffer的设计开始讲起。我们在网络部分(HttpConn)和业务部分(HttpServer)分别使用两套buffer(inbuffer和outbuffer)。
+我们在网络部分(HttpConn)和业务部分(HttpServer)分别使用两套buffer(inbuffer和outbuffer)。
 
 在网络收到数据之后，把数据追加到业务的inbuffer，业务只需要关心自己的inbuffer，而不用关心网络中的各种细节。
 
 业务把要发送的数据填入outbuffer，并追加到网络的outbuffer。
 
 在网络发送数据时，只需要按照顺序发送网络的outbuffer里的内容，而不用关心业务的各种细节。
+
+做到了业务和网络分离。
 
 ## 4. 剩下的琐碎的遇到过的bug都放在了自己平时总结用的腾讯文档里
 
