--- a/遇到的困难.md
+++ b/遇到的困难.md
@@ -19,7 +19,7 @@
 
 在网络收到数据之后，把数据追加到业务的inbuffer，业务只需要关心自己的inbuffer，而不用关心网络中的各种细节。
 
-业务把要发送的数据填入outbuffer，并追加到网络的outbuffer。
+业务把要发送的数据填入自己的outbuffer，并追加到网络的outbuffer。
 
 在网络发送数据时，只需要按照顺序发送网络的outbuffer里的内容，而不用关心业务的各种细节。
 
