--- a/遇到的困难.md
+++ b/遇到的困难.md
@@ -7,23 +7,19 @@
 
 带着这些问题我看了《Linux多线程服务端编程》，并看完了muduo的源码，这些问题自然而然就解决了。
 
-## 2. 如何合理的将框架部分和业务部分分离？
+## 2. 如何处理业务和网络的关系？
 
-这里其实考虑了很久，在最初设计的时候将Http解析的部分放在了HttpConn里面，导致排查问题困难重重，其中最难解决的问题：这到底是收发数据的问题，还是Http解析的问题？
+我在最初设计的时候将Http解析的部分放在了HttpConn里面，导致排查问题困难重重，每次出现bug都需要考虑：这到底是收发数据的问题，还是Http解析的问题？
 
-带着这个思考，我对代码进行了深度的重构。将收发数据和数据处理分离开，结构分层。单独对框架和业务进行验证，问题也就迎刃而解了。
+因此，我对代码进行了深度的重构。将收发数据和数据处理分离开，结构分层。单独对框架和业务进行验证，问题也就迎刃而解了。
 
-## 3. buffer是如何设计的？
+## 3. buffer是如何工作的的？
 
-我们在网络部分(HttpConn)和业务部分(HttpServer)分别使用两套buffer(inbuffer和outbuffer)。
+我们在网络部分和业务部分，分别使用两套buffer。
 
-在网络收到数据之后，把数据追加到业务的inbuffer，业务只需要关心自己的inbuffer，而不用关心网络中的各种细节。
+在网络收到数据之后，把数据追加到业务的inbuffer，业务只需要关心自己的inbuffer，而不用关心网络中的各种细节。业务把要发送的数据填入自己的outbuffer，并追加到网络的outbuffer。
 
-业务把要发送的数据填入自己的outbuffer，并追加到网络的outbuffer。
-
-在网络发送数据时，只需要按照顺序发送网络的outbuffer里的内容，而不用关心业务的各种细节。
-
-做到了业务和网络分离。
+在网络发送数据时，只需要按照顺序发送网络的outbuffer里的内容，而不用关心业务的各种细节。做到了业务和网络分离。
 
 ## 4. 剩下的琐碎的遇到过的bug都放在了自己平时总结用的腾讯文档里
 
