--- a/项目目的.md
+++ b/项目目的.md
@@ -1,9 +1,9 @@
 # 项目目的
 ---
 ### 最初的想法
-本项目是我在百度实习期间利用晚上和周末的时间完成的，实习期间我主要从事大数据开发的工作，和我面试的c++岗位略有出入。
+本项目是我在百度实习期间利用晚上和周末的时间完成的，实习期间我主要从事大数据开发的工作。
 
-为了提升自己的c++水平，就搭建了Web服务器练手。
+为了提升自己的c++水平应对秋招，就选择Web服务器练手。
 
 ### Web服务器能够很好的贯穿所学的知识
 
