--- a/项目目的.md
+++ b/项目目的.md
@@ -1,7 +1,7 @@
 # 项目目的
 ---
 ### 最初的想法
-本项目是我在百度实习期间利用晚上和周末的时间完成的。早在之前就有过搭建自己的个人主页和博客的想法，现在已经实现了一个基本的框架。
+本项目是我在百度实习期间利用晚上和周末的时间完成的。早在之前就有过搭建自己的个人主页和博客的想法，现在终于实现了一个基本的框架。
 
 ### Web服务器能够很好的贯穿所学的知识
 
