--- a/测试、部署及改进.md
+++ b/测试、部署及改进.md
@@ -37,7 +37,7 @@
 * WebServer短连接测试  
 ![shortWeb](https://github.com/kantkant/WebServer/blob/master/testData/WebServer.png)
 * muduo短连接测试  
-![shortMuduo](https://github.com/kantkant/WebServer/blob/master/testData/muduo.png)
+![shortMuduo](https://github.com/kantkant/WebServer/blob/master/testData/muduo.jpg)
 * WebServer长连接测试  
 ![keepWeb](https://github.com/kantkant/WebServer/blob/master/testData/WebServerk.png)
 * muduo长连接测试  
