--- a/测试、部署及改进.md
+++ b/测试、部署及改进.md
@@ -40,4 +40,13 @@
 * muduo长连接测试  
 ![keepMuduo](https://github.com/kantkant/WebServer/blob/master/testData/muduok.png)
 
+# 部署
 
+## 部署环境
+  
+* 本项目部署于腾讯4核8G的云服务器，带宽为5Mbps（请勿使用任何压力测试工具对页面发起压测）
+  
+* 实例
+![实例](https://github.com/kantkant/WebServer/blob/master/testData/云服务器实例.png)
+* 带宽计算规则
+![带宽计算规则](https://github.com/kantkant/WebServer/blob/master/testData/云服务器带宽计算规则.PNG)
