--- a/测试、改进及部署.md
+++ b/测试、改进及部署.md
@@ -44,7 +44,7 @@
 
 ## 部署环境
   
-* 本项目部署于腾讯4核8G的云服务器，带宽为5Mbps（请勿使用任何压力测试工具对页面发起压测）
+* 本项目部署于腾讯4核8G的云服务器，带宽为5Mbps（带宽受限，请勿使用任何压力测试工具对页面发起压测。如有兴趣，可以clone代码后自行测试。）
   
 * 实例
 ![实例](https://github.com/kantkant/WebServer/blob/master/testData/云服务器实例.png)
