--- a/测试、改进及部署.md
+++ b/测试、改进及部署.md
@@ -6,11 +6,11 @@
 * CPU：i7-8750H
 
 ## 测试方法
-* 我的测试环境是4核8G的虚拟机，使用宿主机去访问宿主机时会出现大量的软中断，具体原因还在排查当中。限定唯一的机器和无限的带宽，仅仅是测试我的server和muduo的相对性能。 
+* 手上没有更好的测试条件，所以我的测试环境是4核8G的VmWare Fusion虚拟机，测试方法是使用宿主机去访问虚拟机。本次仅仅是测试server和muduo的相对性能。 
 * 使用工具Webbench，开启500客户端进程，时间为60s。
 * 分别测试短连接和长连接的情况
 * 测试响应为内存中的"Hello World"字符加上必要的HTTP头
-* 我的最终版本中很多方面借鉴了muduo的思路，muduo中也提供了一个简单的HTTP echo测试，因此我将与muduo进行一个小小的对比，我修改了muduo测试的代码，使其echo相同的内容，关闭muduo的所有输出及Log
+* 我的最终版本中很多方面借鉴了muduo的思路，muduo中也提供了一个简单的HTTP echo测试，因此我将与muduo进行一个小小的对比，我修改了muduo测试的代码，使其echo相同的内容。
 * 线程池开启4线程
 * 因为发送的内容很少，为避免发送可能的延迟，关闭Nagle算法
 
