--- a/遇到的困难.md
+++ b/遇到的困难.md
@@ -9,7 +9,7 @@
 
 ## 2. 如何处理业务和网络的关系？
 
-我在最初设计的时候将Http解析的部分放在了HttpConn里面，导致排查问题困难重重，每次出现bug都需要考虑：这到底是收发数据的问题，还是Http解析的问题？
+我在最初设计的时候将Http解析的部分揉进了网络框架里面，导致排查问题困难重重，每次出现bug都需要考虑：这到底是收发数据的问题，还是Http解析的问题？
 
 因此，我对代码进行了深度的重构。将收发数据和数据处理分离开，结构分层。单独对框架和业务进行验证，问题也就迎刃而解了。
 
