--- a/遇到的困难.md
+++ b/遇到的困难.md
@@ -1,9 +1,9 @@
 # 遇到的困难
 
 ## 1. 如何设计各个线程个任务
-其实我觉的实现上的困难都不算真正的困难吧，毕竟都能写出来，无非是解决bug花的时间的长短。
+其实我觉的实现上的困难都不算真正的困难，毕竟都能写出来，无非是解决bug花的时间的长短。
 
-我遇到的最大的问题是不太理解One loop per thread这句话吧，翻译出来不就是每个线程一个循环，我最开始写的也是一个线程一个循环啊，muduo的实现和我的有什么区别呢？还有怎么设计才能减少竞态？
+我遇到的最大的问题是不太理解One loop per thread这句话，翻译出来不就是每个线程一个循环，我最开始写的也是一个线程一个循环啊，muduo的实现和我的有什么区别呢？还有怎么设计才能减少竞态？
 
 带着这些问题我看了《Linux多线程服务端编程》，并看完了muduo的源码，这些问题自然而然就解决了。
 
