--- a/遇到的困难.md
+++ b/遇到的困难.md
@@ -15,11 +15,13 @@
 
 ## 3. buffer是如何工作的的？
 
-我们在网络部分和业务部分，分别使用两套buffer。
+我在网络部分和业务部分，分别使用两套buffer。
 
 在网络收到数据之后，把数据追加到业务的inbuffer，业务只需要关心自己的inbuffer，而不用关心网络中的各种细节。业务把要发送的数据填入自己的outbuffer，并追加到网络的outbuffer。
 
 在网络发送数据时，只需要按照顺序发送网络的outbuffer里的内容，而不用关心业务的各种细节。做到了业务和网络分离。
+
+在这里我使用了std::string作为buffer，而muduo使用了改良过的vector<char>，这也是尽管使用了ET模式，但是我最终性能没能超出muduo太多的重要原因。
 
 ## 4. 剩下的琐碎的遇到过的bug都放在了自己平时总结用的腾讯文档里
 
