--- a/测试、改进及部署.md
+++ b/测试、改进及部署.md
@@ -6,7 +6,7 @@
 * CPU：i7-8750H
 
 ## 测试方法
-* 手上没有更好的测试条件，所以我的测试环境是4核8G的VmWare Fusion虚拟机，测试方法是使用宿主机去访问虚拟机。本次仅仅是测试server和muduo的相对性能。
+* 手上没有更好的测试条件，所以我的测试环境是4核8G的虚拟机，测试方法是使用宿主机去访问虚拟机。本次仅仅是测试server和muduo的相对性能。
 * 使用工具Webbench，开启500客户端进程，时间为60s
 * 分别测试短连接和长连接的情况
 * 测试响应为内存中的"Hello World"字符加上必要的HTTP头
