--- a/连接的维护.md
+++ b/连接的维护.md
@@ -25,7 +25,12 @@
 > * client发出Fin，server会收到0字节，通常不能判断client是close了还是shutdown，这时server应当把消息发完，然后才可以close()，如果对方调用的是close，会收到RST，server能感知到，就可以立即close了
 > * 短连接正常结束，server可以close，也可以不close，大多数的实现是不close的(对HTTP1.1而言)
 
-我的处理方式是全部都不主动调用close()，而是调用shutdown()，让Channel析构的时候自动调用close()函数。这样做的好处是无需手动释放资源，而是通过将资源与对象生命周期绑定，在对象析构时自动释放资源，从而把资源管理转换为对象生命周期管理，而对象生命周期的管理问题已经解决。这也是C++最重要的编程技法：RAII。
+我的处理方式是在所有数据发送完毕之后调用handleclose()：
+> * 对于主动关闭，目前考虑两种情况。1、非keepAlive；2、服务器出现了某种未知错误。上述两种情况可以在发送数据完毕后直接关闭，而不必等对端响应。
+> * 对于被动关闭收到了对端发来的FIN报文。这种情况下在发送数据完毕后调用handleclose()即可，也不必等对端响应。
+> * 对于超时连接，直接关闭即可。
+
+让Channel析构的时候自动调用close()函数。这样做的好处是无需手动释放资源，而是通过将资源与对象生命周期绑定，在对象析构时自动释放资源，从而把资源管理转换为对象生命周期管理，而对象生命周期的管理问题已经解决。这也是C++最重要的编程技法：RAII。
 
 ##### EPOLLIN触发但是read()返回0的情况
 
