--- a/测试、改进及部署.md
+++ b/测试、改进及部署.md
@@ -10,7 +10,7 @@
 * 使用工具Webbench，开启500客户端进程，时间为60s
 * 分别测试短连接和长连接的情况
 * 测试响应为内存中的"Hello World"字符加上必要的HTTP头
-* 我的最终版本中很多方面借鉴了muduo的思路，muduo中也提供了一个简单的HTTP echo测试，因此我将与muduo进行一个小小的对比，我修改了muduo测试的代码，使其echo相同的内容
+* 我的WebServer很多方面借鉴了muduo的思路，muduo中也提供了一个简单的HTTP echo测试，因此我将与muduo进行一个小小的对比，我修改了muduo测试的代码，使其echo相同的内容
 * 线程池开启4线程
 * 因为发送的内容很少，为避免发送可能的延迟，关闭Nagle算法
 
@@ -24,8 +24,7 @@
 | Muduo | 9687 | 45271 | 
 
 * 首先很明显的一点是长连接能处理的请求数是短连接的三四倍，因为没有了连接建立和断开的开销，不需要频繁accept和shutdown/close等系统调用，也不需要频繁建立和销毁对应的结构体。
-* 我的服务器在最后的版本中，没有改进输入输出Buffer，用了效率低下的string，muduo用的是设计良好的vector<char>，我将在后续改进这一点。这也造成了即使采用EPOLLET情况下，我的server性能也只比muduo高出了10%左右。
-* 没有严格的考证，测试时发现，HTTP的header解析的结果用map比用unordered_map快，网上的博客里有很多人做了测试，我在做实验的时候大致也发现了。主要是因为数据量太小，一个HTTP请求头才几个头部字段，建立unordered_map的成本要比map高，数据量小，复杂度根本体现不出来。
+* 我的WebServer在最后的版本中没有改进输入输出Buffer，用了效率低下的string，muduo用的是设计良好的vector<char>，我将在后续改进这一点。这也造成了即使采用EPOLLET情况下，我的server性能也只比muduo高出了10%左右。
 
 
 
@@ -44,7 +43,7 @@
 
 ## 部署环境
   
-* 本项目部署于腾讯4核8G的云服务器，带宽为5Mbps（带宽受限，请勿使用任何压力测试工具对页面发起压测。如有兴趣，可以clone代码后自行测试。）
+* 本项目部署于腾讯4核8G的云服务器，带宽为5Mbps
   
 * 实例
 ![实例](https://github.com/kantkant/WebServer/blob/master/testData/云服务器实例.png)
