--- a/并发模型.md
+++ b/并发模型.md
@@ -29,7 +29,13 @@ epoll的触发模式在这里我选择了ET模式，muduo使用的是LT，这两
 
 ## 定时器
 
-每个SubReactor持有一个定时器，用于处理超时请求和长时间不活跃的连接。muduo中介绍了时间轮的实现和用stl里set的实现，这里我的实现直接使用了stl里的priority_queue，底层是小根堆，并采用惰性删除的方式，事件的超时不会唤醒线程，而是每次循环的最后进行检查，如果超时了再删，因为这里对超时的要求并不会很高，如果此时线程忙，那么检查时间队列的间隔也会短，如果不忙，也给了超时请求更长的等待时间。
+每个SubReactor持有一个定时器，用于处理超时请求和长时间不活跃的连接。muduo中介绍了时间轮的实现和用stl里set的实现，新一版的TimerNodeList重新设计数据结构，在我当前的应用场景下实现了增删改查时间复杂度都收O(1)。
+考虑当前的使用场景：在每次事件循环的开始更新所有活跃的连接的超时时间，在每次事件循环的结束删除到期的连接。
+具体来说，新一版的TimerNode采用了了链式存储，使用循环链表保存所有节点。
+* 在更新TimerNode时，只需要从唯一对应的channel中找到这个指针，将这个指针放入链表的末尾并更新超时时间。
+* 在删除时，只需删除chanel对应的TimerNode节点。
+* 添加新的节点时，直接加到队列末尾。
+* 并采用惰性删除的方式，事件的超时不会唤醒线程，而是每次循环的最后进行检查，如果超时了再删，因为这里对超时的要求并不会很高，如果此时线程忙，那么检查时间队列的间隔也会短，如果不忙，也给了超时请求更长的等待时间。
 
 ## 核心结构
 
